--- a/frontend/src/components/message.css
+++ b/frontend/src/components/message.css
@@ -1,7 +1,7 @@
 .msg{
     background: url('../assets/chatbg.jpeg') ,center,no-repeat ;
-    max-height:75vh ;
-    overflow: hidden;
+    max-height:77vh ;
+    padding: px;
     background-size: cover;
     background-blend-mode:soft-light;
 
