--- a/frontend/src/components/watchparty.css
+++ b/frontend/src/components/watchparty.css
@@ -1,5 +1,5 @@
 .wdiv{
-background-color: rgb(64, 48, 83);
+background-color: #090a0e;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     
 }
