--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -5,7 +5,7 @@
 @custom-variant dark (&:is(.dark *));
 body{
 
-background: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)),url('./assets/mainbg.jpg');
+background: linear-gradient(rgba(0, 0, 0, 0.2),rgba(0, 0, 0, 0.2)),url('./assets/mainbg.png');
 background-size: cover;
 background-position: center;
 background-repeat: no-repeat;
